--- a/aulas/calculadora/style.css
+++ b/aulas/calculadora/style.css
@@ -5,6 +5,13 @@
   box-sizing: border-box;
 }
 
+button, 
+input {
+  border: none;
+  outline: none;
+}
+
+
 /* ===== BASE ========== */
 html, 
 body {
@@ -13,9 +20,147 @@ body {
 
 body {
   font: 400 1.2rem 'Pacifico', sans-serif;
+  background-color: rgb(143, 143, 143);
 }
 
+
 /* ===== LAYOUT ========== */
+.container {
+  display: flex;
+  flex-flow: row wrap;
+
+  width: 80vw;
+  height: 80vh;
+  max-height: 36rem;
+
+  margin: 3rem auto;
+
+  border-radius: 8px;
+  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.5);
+}
+
+
+/* ===== CALCULADORA ========== */
+.calculadora {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  max-height: 36rem;
+  gap: 3rem;
+
+  padding: 1rem;
+  border-radius: 8px;
+  flex: 0 0 50%;
+  background-color: rgb(230, 230, 230);
+}
+
+input {
+  width: 100%;
+  height: 3rem;
+  max-width: 18rem;
+
+  font-size: 1rem;
+  padding: .75rem;
+  border-radius: 4px;
+}
+
+input[type=number]:focus {
+  outline: lightblue;
+  box-shadow: 2px 4px 8px rgba(0, 139, 139, 0.5);
+}
+
+
+/* ===== OPERAÇÕES ========== */
+.operacoes {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+  max-height: 36rem;
+  gap: 1vw;
+}
+
+button {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  padding: 1.5rem;
+
+  width: 4rem;
+  cursor: pointer;
+
+  color: white;
+  border-radius: 4px;
+  background-color: cornflowerblue;
+}
+
+
+/* ===== HISTORY ========== */
+.history {
+  padding: 1rem;
+  border-radius: 8px;
+  flex: 0 0 50%;
+
+  text-align: center;
+
+  color: #dddcdc;
+  background-color: rgb(82, 81, 81);
+}
+
+h3 {
+  color: white;
+  margin-bottom: 3.5rem;
+}
+
+.history p {
+  text-align: end;
+  margin-bottom: 1rem;
+}
+
+.history b {
+  color: white;
+}
+
+#output {
+  cursor: not-allowed
+}
+
+
+/* ===== FOOTER ========== */
+footer {
+  color: white;
+  margin: 0 auto;
+  text-align: center;
+}
 
 
 /* ===== MEDIA QUERRIES ========== */
+/*
+  X-Small devices (portrait phones, less than 576px)
+  No media query for `xs` since this is the default in Bootstrap
+*/
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) { 
+
+}
