--- a/tarefa-5/style.css
+++ b/tarefa-5/style.css
@@ -13,14 +13,9 @@ button {
 
 /* ===== VARIABLES ========== */
 :root {
-  --black: #242424;
-  --darkpurple: #1f0c22;
-  --lightpurple: #342a89;
-
-  --yellow: #fecd23;
-  --gray: #808080;
-  --light-gray: #c5c4c4;
+  --light-gray: #a8a8a8;
   --white: #fafafa;
+  --black: #000000;
 }
 
 
@@ -32,7 +27,7 @@ body {
 }
 
 body {
-  background: linear-gradient(var(--black), var(--darkpurple));
+  background-color: var(--light-gray);
 }
 
 
@@ -44,22 +39,29 @@ body {
   align-items: center;
 
   min-height: 90vh;
-  max-width: 40rem;
-  margin: 3rem auto;
+  max-height: fit-content;
+  max-width: 60rem;
+  
+  margin: 1rem auto;
 
-  color: var(--white);
+  color: var(--black);
   font-size: 1.6rem;
   font-family: 'Roboto', sans-serif;
 
   border-radius: 8px;
+  background-color: var(--white);
+  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.5);
 }
 
-.dark {
-  background: linear-gradient(var(--gray), var(--light-gray));
+img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
-.light {
-  background-color: var(--light-gray);
+.swiper {
+  width: 100%;
+  height: 300px;
 }
 
 
@@ -68,6 +70,7 @@ body {
   font-size: 2rem;
   text-align: center;
   
+  margin-bottom: 1rem;
   color: var(--yellow);
 }
 
@@ -78,85 +81,8 @@ body {
 
 
 /* ===== MAIN ========== */
-
-/* Lamps */
-.lamp {
-  height: 90px;
-  width: 90px;
-  object-fit: cover;
-}
-
-.show {
-  display: block;
-  opacity: 1;
-}
-
-.hide {
-  display: none;
-  opacity: 0;
-}
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--gray);
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: #e0e0e0;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: var(--darkpurple);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px var(--darkpurple);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+.cards {
+  display: flex;
 }
 
 /* ===== FOOTER ========== */
