--- a/tarefa-5/css/style.css
+++ b/tarefa-5/css/style.css
@@ -128,8 +128,7 @@ input[type=text] {
   height: 3rem;
 
   padding: 1rem;
-
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   border-radius: 4px;
 }
 
@@ -142,13 +141,22 @@ button {
   padding: 1rem;
   color: white;
 
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   cursor: pointer;
 
   border-radius: 8px;
   background-color: #0062cc;
 }
 
+button:hover {
+  background-color: #014b9a;
+}
+
+#output {
+  align-self: flex-start;
+  margin-top: 2rem;
+  font-size: 1.1rem;
+}
 
 /* ===== MEDIA QUERRIES ========== */
 
