--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ button {
 
 
 /* ===== BASE ========== */
-html,
-body {
+html, body {
   height: 100%;
 }
 
@@ -72,7 +71,7 @@ body {
   box-shadow: 8px 8px 16px rgba(243, 211, 189, 0.5);
 }
 
-.tasks {
+.menu {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -81,7 +80,8 @@ body {
   gap: 1rem;
 }
 
-.task-item {
+.menu-item {
+  list-style: none;
   display: flex;
 }
 
